<resources>
    <string name="app_name">Biegalizacja</string>
    <string name="button_start">start</string>
    <string name="button_stop">stop</string>
    <string name="button_pause">pause</string>
    <string name="button_resume">resume</string>
    <string name="button_reset">reset</string>
    <string name="button_start_training">start training</string>
    <string name="button_routes">show routes</string>
    <string name="button_route_show">show route</string>
    <string name="button_route_safe">save route</string>
    <string name="time_deafult">00:00</string>
    <string name="distance_deafult">0m</string>
    <string name="distance_result_deafult">Distance: </string>
    <string name="average_speed_deafult">Average speed: </string>
    <string name="calories_deafult">Calories: </string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="mainimage_logo">App Logo</string>
    <string name="main_welcometext">Ready for today?</string>
    <string name="title_activity_route_preview">Map</string>
    <string name="button_bmi">CALCULTE YOUR BMI</string>
    <string name="bmi_height">Your height (cm)</string>
    <string name="bmi_default_height">172</string>
    <string name="bmi_weight">Your weight (kg)</string>
    <string name="bmi_default_weight">64</string>
    <string name="button_inside_bmi">CALCULATE MY BMI</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">180</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="setting_main">SETTINGS</string>
    <string name="settings_name">YOUR NAME:</string>
    <string name="settings_height">YOUR HEIGHT:</string>
    <string name="settings_weight">YOUR WEIGHT:</string>
    <string name="settings_save_button">SAVE DATA</string>

</resources>
